# ppd534

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  colab-installer.sh  environment.yml  installer.sh  pyproject.toml
.github/workflows/: ci.yml
assessments/: group-assignments.md  group-final-project.md  group-peer-review.md  individual-midterm-exam.md  individual-preparatory-notes.md  individual-problem-sets.md
assignments/: group-assignment-1.md  group-assignment-2.md  group-assignment-3.md  group-assignment-4.md  group-assignment-5.md  group-final-project.md  reading-responses.md  readme.md
assignments/final-project/: readme.md
assignments/group-assignment-01/: README.md
assignments/group-assignment-02/: README.md
assignments/group-assignment-03/: README.md
assignments/group-assignment-04/: README.md
assignments/group-assignment-05/: README.md
assignments/reading-responses/: readme.md
data/: census_tracts_data_la.csv  gdp.csv  listings-la_oc_vc.csv
data/tl_2017_06_tract/: tl_2017_06_tract.shp.ea.iso.xml  tl_2017_06_tract.shp.iso.xml  tl_2017_06_tract.shp.xml  tl_2017_06_tract.shx
docker/: Dockerfile  readme.md
modules/: docker-jupyterlab.bat  readme.md  windows-launch-jupyterlab.bat  windows-start-docker.bat
modules/01-introduction/: readme.md  test.ipynb
modules/02-data-collection/: readme.md
modules/03-coding-bootcamp/: lecture-1.ipynb  lecture-2.ipynb  readme.md
modules/03-coding-bootcamp-i/: lecture.ipynb  readme.md
modules/03-coding-refresher/: lecture-1.ipynb  practice_coding_bootcamp_1.ipynb  practice_coding_bootcamp_2.ipynb  readme.md
modules/04-coding-bootcamp-ii/: lecture.ipynb  readme.md
modules/04-data-cleaning-description/: lecture.ipynb  practice.ipynb
modules/05-data-cleaning-description/: lecture.ipynb  readme.md
modules/05-data-visualization/: lecture.ipynb  practice.ipynb  string-formatting.ipynb
modules/06-data-visualization/: lecture.ipynb  readme.md  string-formatting.ipynb
modules/06-data-viz-workshop/: readme.md
modules/07-spatial-data/: lecture.ipynb  practice.ipynb  readme.md
modules/08-midterm-exam/: readme.md
modules/08-spatial-workshop/: readme.md
software/: colab-installer.sh  readme.md
syllabus/: make-pdf.bat  readme.md
(+51 files in other folders)
